Improve prefilled username field matching

Chrome does not fill credentials into login forms if the username field is
prefilled on page load. Often this is some placeholder text. We have a list of
strings that are known placeholders. This CL makes two contributions:

- Adding a few new items to the list that were discovered during testing.
- Making the comparison case insensitive (at least for ASCII characters). We
  had the situation that "Email Address" and "email address" where whitelisted
  but a site failed that used "Email address".

Bug: 832622
Change-Id: Id07c1defd84236e22c8f6c23f041c7d1d6a8dbee
Reviewed-on: https://chromium-review.googlesource.com/c/1396035
Commit-Queue: Dominic Battré <battre@chromium.org>
Reviewed-by: Christos Froussios <cfroussios@chromium.org>
Reviewed-by: Dominic Battré <battre@chromium.org>
Reviewed-by: Vadym Doroshenko <dvadym@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620669}
Former-commit-id: cbf5e60a05bfa68fa2f8afd28fe668fa9f1e8ef6