components/autofill/content/renderer/password_autofill_agent.cc
@@ -13,7 +13,6 @@
 #include <vector>
 
 #include "base/bind.h"
-#include "base/containers/flat_set.h"
 #include "base/i18n/case_conversion.h"
 #include "base/metrics/histogram_macros.h"
 #include "base/no_destructor.h"
@@ -25,6 +24,7 @@
 #include "components/autofill/content/renderer/form_autofill_util.h"
 #include "components/autofill/content/renderer/password_form_conversion_utils.h"
 #include "components/autofill/content/renderer/password_generation_agent.h"
+#include "components/autofill/content/renderer/prefilled_values_detector.h"
 #include "components/autofill/content/renderer/renderer_save_password_progress_logger.h"
 #include "components/autofill/core/common/autofill_constants.h"
 #include "components/autofill/core/common/autofill_util.h"
@@ -96,66 +96,6 @@ bool FillDataContainsFillableUsername(const PasswordFormFillData& fill_data) {
   return !fill_data.username_field.name.empty() &&
          (!fill_data.additional_logins.empty() ||
           !fill_data.username_field.value.empty());
-}
-
-// Checks if the prefilled value of the username element is one of the known
-// values possibly used as placeholders. The list of possible placeholder
-// values comes from popular sites exhibiting this issue.
-// TODO(crbug.com/832622): Remove this once a stable solution is in place.
-bool PossiblePrefilledUsernameValue(const std::string& username_value) {
-  // Explicitly create a |StringFlatSet| when constructing
-  // kPrefilledUsernameValues to work around GCC bug 84849, which causes the
-  // initializer list not to be properly forwarded to base::flat_set's
-  // constructor.
-  using StringFlatSet = base::flat_set<std::string, std::less<>>;
-  static base::NoDestructor<StringFlatSet> kPrefilledUsernameValues(
-      StringFlatSet({"3~15个字符,中文字符7个以内",
-                     "Benutzername",
-                     "Digite seu CPF ou e-mail",
-                     "DS Logon Username",
-                     "Email Address",
-                     "email address",
-                     "Email masih kosong",
-                     "Email/手機號碼",
-                     "Enter User Name",
-                     "Identifiant",
-                     "Kullanıcı Adı",
-                     "Kunden-ID",
-                     "Nick",
-                     "Nom Utilisateur",
-                     "Rut",
-                     "Siret",
-                     "this is usually your email address",
-                     "UID/用戶名/Email",
-                     "User Id",
-                     "User Name",
-                     "Username",
-                     "username",
-                     "username or email",
-                     "Username or email:",
-                     "Username/Email",
-                     "Usuario",
-                     "Your email address",
-                     "Имя",
-                     "Логин",
-                     "Логин...",
-                     "כתובת דוא''ל",
-                     "اسم العضو",
-                     "اسم المستخدم",
-                     "الاسم",
-                     "نام کاربری",
-                     "メールアドレス",
-                     "用户名",
-                     "用户名/Email",
-                     "請輸入身份證字號",
-                     "请用微博帐号登录",
-                     "请输入手机号或邮箱",
-                     "请输入邮箱或手机号",
-                     "邮箱/手机/展位号"}));
-
-  return kPrefilledUsernameValues->find(
-             base::TrimWhitespaceASCII(username_value, base::TRIM_ALL)) !=
-         kPrefilledUsernameValues->end();
 }
 
 // Returns true if password form has username and password fields with either
